--- a/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
+++ b/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Compile Include="ContainerHandleTests.cs" />
     <Compile Include="LocalPrincipalManagerTests.cs" />
+    <Compile Include="ProcessManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -48,6 +49,9 @@
     <Reference Include="NLog, Version=2.1.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NLog.2.1.0\lib\net45\NLog.dll</HintPath>
+    </Reference>
+    <Reference Include="NSubstitute">
+      <HintPath>..\packages\NSubstitute.1.7.1.0\lib\NET40\NSubstitute.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.DirectoryServices" />
