--- a/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
+++ b/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
@@ -35,24 +35,56 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ContainerHandleTests.cs" />
-    <Compile Include="TestSupport\FactAdminRequired.cs" />
-    <Compile Include="LocalPrincipalManagerTests.cs" />
+    <Compile Include="ContainerTests.cs" />
+    <Compile Include="Messaging\MessageTransportTest.cs" />
+    <Compile Include="Messaging\MessagingClientTest.cs" />
+    <Compile Include="Messaging\SecureStringJsonConverterTest.cs" />
+    <Compile Include="ProcessCommandTests.cs" />
+    <Compile Include="ProcessManagerStartProcessTest.cs" />
     <Compile Include="ProcessManagerTests.cs" />
+    <Compile Include="TestSupport\FactAdminRequired.cs" />
+    <Compile Include="Messaging\MessageDispatcherTest.cs" />
+    <Compile Include="ProcessLauncherTest.cs" />
+    <Compile Include="JobObjectTests.cs" />
+    <Compile Include="LocalPrincipalManagerTests.cs" />
+    <Compile Include="ProcessManagerStatsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestSupport\InputSource.cs" />
+    <Compile Include="TestSupport\TestUserHolder.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\IronFoundry.Warden.ContainerHost\IronFoundry.Warden.ContainerHost.csproj">
+      <Project>{586784cf-de8a-411f-ad99-18f00dc2a75b}</Project>
+      <Name>IronFoundry.Warden.ContainerHost</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IronFoundry.Warden.Protocol\IronFoundry.Warden.Protocol.csproj">
+      <Project>{ddd0537b-4afe-4beb-bf30-4df0a5367a18}</Project>
+      <Name>IronFoundry.Warden.Protocol</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IronFoundry.Warden.Shared\IronFoundry.Warden.Shared.csproj">
+      <Project>{cb7ba555-21fd-4c57-a629-a925b6a83a31}</Project>
+      <Name>IronFoundry.Warden.Shared</Name>
+    </ProjectReference>
     <ProjectReference Include="..\IronFoundry.Warden\IronFoundry.Warden.csproj">
       <Project>{cc1c255a-a120-4d7f-b40f-c4cb3cdb193b}</Project>
       <Name>IronFoundry.Warden</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NLog, Version=2.1.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NLog.2.1.0\lib\net45\NLog.dll</HintPath>
     </Reference>
     <Reference Include="NSubstitute">
       <HintPath>..\packages\NSubstitute.1.7.1.0\lib\NET40\NSubstitute.dll</HintPath>
+    </Reference>
+    <Reference Include="protobuf-net, Version=2.0.0.668, Culture=neutral, PublicKeyToken=257b51d87d2e4d67, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.DirectoryServices" />
