--- a/IronFoundry.Warden/IronFoundry.Warden.csproj
+++ b/IronFoundry.Warden/IronFoundry.Warden.csproj
@@ -51,6 +51,9 @@
     <Compile Include="Containers\ContainerState.cs" />
     <Compile Include="Containers\IContainerManager.cs" />
     <Compile Include="Containers\InfoBuilder.cs" />
+    <Compile Include="Containers\JobObject.cs" />
+    <Compile Include="Containers\ProcessLauncher\ProcessLauncher.cs" />
+    <Compile Include="Containers\SafeJobObjectHandle.cs" />
     <Compile Include="Handlers\ContainerRequestHandler.cs" />
     <Compile Include="Handlers\CopyRequestHandler.cs" />
     <Compile Include="Handlers\CopyInRequestHandler.cs" />
@@ -77,6 +80,7 @@
     <Compile Include="Jobs\JobStatusEventArgs.cs" />
     <Compile Include="PInvoke\CloseHandle.cs" />
     <Compile Include="PInvoke\Constants.cs" />
+    <Compile Include="PInvoke\JobObject.cs" />
     <Compile Include="PInvoke\Structs.cs" />
     <Compile Include="PInvoke\LookupAccountSid.cs" />
     <Compile Include="PInvoke\GetTokenInformation.cs" />
@@ -152,6 +156,10 @@
     <Compile Include="Server\Buffer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\IronFoundry.Warden.ContainerHost\IronFoundry.Warden.ContainerHost.csproj">
+      <Project>{586784cf-de8a-411f-ad99-18f00dc2a75b}</Project>
+      <Name>IronFoundry.Warden.ContainerHost</Name>
+    </ProjectReference>
     <ProjectReference Include="..\IronFoundry.Warden.Protocol\IronFoundry.Warden.Protocol.csproj">
       <Project>{ddd0537b-4afe-4beb-bf30-4df0a5367a18}</Project>
       <Name>IronFoundry.Warden.Protocol</Name>
