Cleanup memory statistics and extract Process-specific methods into a helper.
Conflicts:
	IronFoundry.Warden.Test/ProcessManagerStartProcessTest.cs
	IronFoundry.Warden.Test/ProcessManagerStatsTests.cs
	IronFoundry.Warden.Test/ProcessManagerTests.cs
	IronFoundry.Warden/Utilities/ProcessManager.cs

--- a/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
+++ b/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Messaging\MessagingClientTest.cs" />
     <Compile Include="Messaging\SecureStringJsonConverterTest.cs" />
     <Compile Include="ProcessCommandTests.cs" />
+    <Compile Include="ProcessHelperTest.cs" />
     <Compile Include="ProcessManagerStartProcessTest.cs" />
     <Compile Include="ProcessManagerTests.cs" />
     <Compile Include="TestSupport\FactAdminRequired.cs" />
