--- a/IronFoundry.Warden.ContainerHost/IronFoundry.Warden.ContainerHost.csproj
+++ b/IronFoundry.Warden.ContainerHost/IronFoundry.Warden.ContainerHost.csproj
@@ -36,6 +36,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="protobuf-net, Version=2.0.0.668, Culture=neutral, PublicKeyToken=257b51d87d2e4d67, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -54,9 +58,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\IronFoundry.Warden.Protocol\IronFoundry.Warden.Protocol.csproj">
+      <Project>{ddd0537b-4afe-4beb-bf30-4df0a5367a18}</Project>
+      <Name>IronFoundry.Warden.Protocol</Name>
+    </ProjectReference>
     <ProjectReference Include="..\IronFoundry.Warden.Shared\IronFoundry.Warden.Shared.csproj">
       <Project>{cb7ba555-21fd-4c57-a629-a925b6a83a31}</Project>
       <Name>IronFoundry.Warden.Shared</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IronFoundry.Warden\IronFoundry.Warden.csproj">
+      <Project>{cc1c255a-a120-4d7f-b40f-c4cb3cdb193b}</Project>
+      <Name>IronFoundry.Warden</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
