Add ProcessMonitor to track top level started processes

--- a/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
+++ b/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ProcessCommandTests.cs" />
     <Compile Include="ProcessHelperTest.cs" />
     <Compile Include="ProcessHostLauncherTests.cs" />
+    <Compile Include="ProcessMonitorTests.cs" />
     <Compile Include="TestSupport\Asserts.cs" />
     <Compile Include="TestSupport\FactAdminRequired.cs" />
     <Compile Include="Messaging\MessageDispatcherTest.cs" />
