Added EnableLogging message to proxy and stub containers

--- a/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
+++ b/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Compile Include="CommandRunnerTests.cs" />
     <Compile Include="ContainerHandleTests.cs" />
+    <Compile Include="ContainerLogEmitterTest.cs" />
     <Compile Include="ContainerProxyTest.cs" />
     <Compile Include="ContainerResourceHolderTest.cs" />
     <Compile Include="ContainerStubTests.cs" />
