--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "IronFoundry.Warden.Protocol/warden"]
 	path = IronFoundry.Warden.Protocol/warden
-	url = https://github.com/cloudfoundry/warden.git
+	url = https://github.com/IronFoundry/warden.git
