--- a/IronFoundry.Warden/IronFoundry.Warden.csproj
+++ b/IronFoundry.Warden/IronFoundry.Warden.csproj
@@ -57,7 +57,14 @@
     <Compile Include="Containers\InfoBuilder.cs" />
     <Compile Include="Containers\JobObject.cs" />
     <Compile Include="Containers\ContainerHostLauncher.cs" />
+    <Compile Include="Containers\Messages\ContainerDestroyMessage.cs" />
+    <Compile Include="Containers\Messages\ContainerInitializeMessage.cs" />
+    <Compile Include="Containers\Messages\ContainerStateMessage.cs" />
+    <Compile Include="Containers\Messages\ContainerStatisticsMessage.cs" />
+    <Compile Include="Containers\Messages\CreateProcessMessage.cs" />
+    <Compile Include="Containers\Messages\CreateProcessStartInfo.cs" />
     <Compile Include="Containers\Messages\EnableLoggingMessage.cs" />
+    <Compile Include="Containers\Messages\RunCommandMessage.cs" />
     <Compile Include="Containers\ProcessMonitor.cs" />
     <Compile Include="Utilities\ProcessDataReceivedEventArgs.cs" />
     <Compile Include="Containers\SafeJobObjectHandle.cs" />
