Added install.ps1 to register service

--- a/IronFoundry.Warden.Service/IronFoundry.Warden.Service.csproj
+++ b/IronFoundry.Warden.Service/IronFoundry.Warden.Service.csproj
@@ -52,6 +52,9 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="install.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
