--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ nuget.exe
 [Bb]in/
 [Oo]bj/
 output/
+shared/CommonAssemblyInfo.cs
 
 # mstest test results
 TestResults
@@ -112,3 +113,4 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+
