When stopping or destroying a container, all the resources are cleaned up properly.

--- a/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
+++ b/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
@@ -40,6 +40,8 @@
     <Compile Include="ContainerProxyTest.cs" />
     <Compile Include="ContainerResourceHolderTest.cs" />
     <Compile Include="ContainerStubTests.cs" />
+    <Compile Include="ContainerUserTests.cs" />
+    <Compile Include="LocalTcpPortManagerTests.cs" />
     <Compile Include="LoggingRequestHandlerTest.cs" />
     <Compile Include="Messaging\MessageTransportTest.cs" />
     <Compile Include="Messaging\MessagingClientTest.cs" />
