Add clean up of containers on shutdown of service

--- a/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
+++ b/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
@@ -37,6 +37,7 @@
     <Compile Include="CommandRunnerTests.cs" />
     <Compile Include="ContainerHandleTests.cs" />
     <Compile Include="ContainerLogEmitterTest.cs" />
+    <Compile Include="ContainerManagerTests.cs" />
     <Compile Include="ContainerProxyTest.cs" />
     <Compile Include="ContainerResourceHolderTest.cs" />
     <Compile Include="ContainerStubTests.cs" />
