Update logging for port etc. and fix up 4.0 config file.

--- a/IronFoundry.Warden.IISHost/Resources/applicationhost.config
+++ b/IronFoundry.Warden.IISHost/Resources/applicationhost.config
@@ -221,15 +221,16 @@
       <add name="RequestFilteringModule" image="%windir%\System32\inetsrv\modrqflt.dll" />
       <add name="CustomErrorModule" image="%windir%\System32\inetsrv\custerr.dll" />
       <add name="HttpLoggingModule" image="%windir%\System32\inetsrv\loghttp.dll" />
+      <add name="RequestMonitorModule" image="%windir%\System32\inetsrv\iisreqs.dll" />
       <add name="IsapiModule" image="%windir%\System32\inetsrv\isapi.dll" />
       <add name="IsapiFilterModule" image="%windir%\System32\inetsrv\filter.dll" />
-      <add name="ManagedEngineV4.0_32bit" image="%windir%\Microsoft.NET\Framework\v4.0.30319\webengine4.dll" preCondition="integratedMode,runtimeVersionv4.0,bitness32" />
-      <add name="ManagedEngineV4.0_64bit" image="%windir%\Microsoft.NET\Framework64\v4.0.30319\webengine4.dll" preCondition="integratedMode,runtimeVersionv4.0,bitness64" />
       <add name="ConfigurationValidationModule" image="%windir%\System32\inetsrv\validcfg.dll" />
-      <add name="BasicAuthenticationModule" image="%windir%\System32\inetsrv\authbas.dll" />
+      <add name="ManagedEngineV4.0_64bit" image="%windir%\Microsoft.NET\Framework64\v4.0.30319\webengine4.dll" preCondition="integratedMode,runtimeVersionv4.0,bitness64" />
+      <add name="ManagedEngineV4.0_32bit" image="%windir%\Microsoft.NET\Framework\v4.0.30319\webengine4.dll" preCondition="integratedMode,runtimeVersionv4.0,bitness32" />
       <add name="ManagedEngine64" image="%windir%\Microsoft.NET\Framework64\v2.0.50727\webengine.dll" preCondition="integratedMode,runtimeVersionv2.0,bitness64" />
       <add name="ManagedEngine" image="%windir%\Microsoft.NET\Framework\v2.0.50727\webengine.dll" preCondition="integratedMode,runtimeVersionv2.0,bitness32" />
-      <add name="WebSocketModule" image="%windir%\System32\inetsrv\iiswsock.dll" />
+      <add name="BasicAuthenticationModule" image="%windir%\System32\inetsrv\authbas.dll" />
+      <!--<add name="WebSocketModule" image="%windir%\System32\inetsrv\iiswsock.dll" />-->
       <add name="DynamicCompressionModule" image="%windir%\System32\inetsrv\compdyn.dll" />
       <add name="HttpRedirectionModule" image="%windir%\System32\inetsrv\redirect.dll" />
       <add name="CertificateMappingAuthenticationModule" image="%windir%\System32\inetsrv\authcert.dll" />
@@ -239,7 +240,6 @@
       <add name="IISCertificateMappingAuthenticationModule" image="%windir%\System32\inetsrv\authmap.dll" />
       <add name="IpRestrictionModule" image="%windir%\System32\inetsrv\iprestr.dll" />
       <add name="DynamicIpRestrictionModule" image="%windir%\System32\inetsrv\diprestr.dll" />
-      <add name="RequestMonitorModule" image="%windir%\System32\inetsrv\iisreqs.dll" />
     </globalModules>
 
     <httpCompression directory="%SystemDrive%\inetpub\temp\IIS Temporary Compressed Files">
