Update host configs to allow module override and others

--- a/IronFoundry.Warden.IISHost/Resources/applicationhost.config
+++ b/IronFoundry.Warden.IISHost/Resources/applicationhost.config
@@ -26,9 +26,9 @@
       <section name="httpLogging" overrideModeDefault="Deny" />
       <section name="httpProtocol" overrideModeDefault="Allow" />
       <section name="httpRedirect" overrideModeDefault="Allow" />
-      <section name="httpTracing" overrideModeDefault="Deny" />
+      <section name="httpTracing" overrideModeDefault="Allow" />
       <section name="isapiFilters" allowDefinition="MachineToApplication" overrideModeDefault="Deny" />
-      <section name="modules" allowDefinition="MachineToApplication" overrideModeDefault="Deny" />
+      <section name="modules" allowDefinition="MachineToApplication" overrideModeDefault="Allow" />
       <section name="odbcLogging" overrideModeDefault="Deny" />
       <sectionGroup name="security">
         <section name="access" overrideModeDefault="Deny" />
@@ -51,7 +51,7 @@
       <section name="staticContent" overrideModeDefault="Allow" />
       <sectionGroup name="tracing">
         <section name="traceFailedRequests" overrideModeDefault="Allow" />
-        <section name="traceProviderDefinitions" overrideModeDefault="Deny" />
+        <section name="traceProviderDefinitions" overrideModeDefault="Allow" />
       </sectionGroup>
       <section name="urlCompression" overrideModeDefault="Allow" />
       <section name="validation" overrideModeDefault="Allow" />
