--- a/IronFoundry.Warden.IISHost/Resources/v2.0AppHost.config
+++ b/IronFoundry.Warden.IISHost/Resources/v2.0AppHost.config
@@ -29,7 +29,7 @@
       <section name="httpRedirect" overrideModeDefault="Allow" />
       <section name="httpTracing" overrideModeDefault="Deny" />
       <section name="isapiFilters" allowDefinition="MachineToApplication" overrideModeDefault="Deny" />
-      <section name="modules" allowDefinition="MachineToApplication" overrideModeDefault="Deny" />
+      <section name="modules" allowDefinition="MachineToApplication" overrideModeDefault="Allow" />
       <section name="odbcLogging" overrideModeDefault="Deny" />
       <sectionGroup name="security">
         <section name="access" overrideModeDefault="Deny" />
