--- a/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
+++ b/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ContainerStubTests.cs" />
     <Compile Include="ContainerUserTests.cs" />
     <Compile Include="IFTestHelper.cs" />
+    <Compile Include="JobObjectLimitsTests.cs" />
     <Compile Include="LimitMemoryRequestHandlerTest.cs" />
     <Compile Include="LocalTcpPortManagerTests.cs" />
     <Compile Include="LoggingRequestHandlerTest.cs" />
