--- a/IronFoundry.Warden/IronFoundry.Warden.csproj
+++ b/IronFoundry.Warden/IronFoundry.Warden.csproj
@@ -70,7 +70,11 @@
     <Compile Include="Containers\Messages\RunCommandMessage.cs" />
     <Compile Include="Containers\ProcessMonitor.cs" />
     <Compile Include="Handlers\LoggingRequestHandler.cs" />
+    <Compile Include="PInvoke\DesktopRights.cs" />
     <Compile Include="PInvoke\IoCompletionPort.cs" />
+    <Compile Include="PInvoke\StandardRights.cs" />
+    <Compile Include="PInvoke\WindowsStationRights.cs" />
+    <Compile Include="Utilities\DesktopSecurity.cs" />
     <Compile Include="Utilities\IFirewallManager.cs" />
     <Compile Include="Utilities\ILocalTcpPortManager.cs" />
     <Compile Include="Utilities\INetShRunner.cs" />
@@ -187,6 +191,7 @@
     <Compile Include="Utilities\Statics.cs" />
     <Compile Include="Utilities\TempFile.cs" />
     <Compile Include="Server\Buffer.cs" />
+    <Compile Include="Utilities\WindowStationSecurity.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IronFoundry.Warden.Protocol\IronFoundry.Warden.Protocol.csproj">
@@ -199,9 +204,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="AsproLock">
-      <HintPath>..\lib\AsproLock\AsproLock.dll</HintPath>
-    </Reference>
     <Reference Include="ICSharpCode.SharpZipLib">
       <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
