--- a/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
+++ b/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ProcessHelperTest.cs" />
     <Compile Include="ProcessHostLauncherTests.cs" />
     <Compile Include="ProcessMonitorTests.cs" />
+    <Compile Include="TestSupport\ArgMatchers.cs" />
     <Compile Include="TestSupport\Asserts.cs" />
     <Compile Include="TestSupport\FactAdminRequired.cs" />
     <Compile Include="Messaging\MessageDispatcherTest.cs" />
