--- a/IronFoundry.Warden/IronFoundry.Warden.csproj
+++ b/IronFoundry.Warden/IronFoundry.Warden.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Containers\JobObject.cs" />
     <Compile Include="Containers\ContainerHostLauncher.cs" />
     <Compile Include="Containers\JobObjectLimits.cs" />
+    <Compile Include="Containers\Messages\BindMountMessage.cs" />
     <Compile Include="Containers\Messages\ContainerDestroyMessage.cs" />
     <Compile Include="Containers\Messages\ContainerInitializeMessage.cs" />
     <Compile Include="Containers\Messages\ContainerStateMessage.cs" />
