Added unit tests for LinkRequestHandler

--- a/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
+++ b/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ContainerResourceHolderTest.cs" />
     <Compile Include="ContainerStubTests.cs" />
     <Compile Include="ContainerUserTests.cs" />
+    <Compile Include="Handlers\LinkRequestHandlerTests.cs" />
     <Compile Include="IFTestHelper.cs" />
     <Compile Include="JobObjectLimitsTests.cs" />
     <Compile Include="Handlers\DestroyRequestHandlerTests.cs" />
