Move CopyRequestHandler logic to ContainerStub

--- a/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
+++ b/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
@@ -34,36 +34,37 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AssertHelper.cs" />
-    <Compile Include="CommandRunnerTests.cs" />
-    <Compile Include="ContainerHandleTests.cs" />
-    <Compile Include="ContainerLogEmitterTest.cs" />
-    <Compile Include="ContainerManagerTests.cs" />
-    <Compile Include="ContainerProxyTest.cs" />
-    <Compile Include="ContainerResourceHolderTest.cs" />
-    <Compile Include="ContainerStubTests.cs" />
-    <Compile Include="ContainerUserTests.cs" />
+    <Compile Include="TestSupport\AssertHelper.cs" />
+    <Compile Include="Tasks\CommandRunnerTests.cs" />
+    <Compile Include="Containers\ContainerHandleTests.cs" />
+    <Compile Include="Containers\ContainerLogEmitterTest.cs" />
+    <Compile Include="Containers\ContainerManagerTests.cs" />
+    <Compile Include="Containers\ContainerProxyTest.cs" />
+    <Compile Include="Containers\ContainerResourceHolderTest.cs" />
+    <Compile Include="Containers\ContainerStubTests.cs" />
+    <Compile Include="Containers\ContainerUserTests.cs" />
     <Compile Include="Handlers\LinkRequestHandlerTests.cs" />
-    <Compile Include="IFTestHelper.cs" />
-    <Compile Include="JobObjectLimitsTests.cs" />
+    <Compile Include="TestSupport\IFTestHelper.cs" />
+    <Compile Include="PInvoke\JobObjectLimitsTests.cs" />
     <Compile Include="Handlers\DestroyRequestHandlerTests.cs" />
     <Compile Include="Handlers\LimitMemoryRequestHandlerTest.cs" />
-    <Compile Include="LocalTcpPortManagerTests.cs" />
+    <Compile Include="Utilities\FileSystemManagerTests.cs" />
+    <Compile Include="Utilities\LocalTcpPortManagerTests.cs" />
     <Compile Include="Handlers\LoggingRequestHandlerTest.cs" />
     <Compile Include="Messaging\MessageTransportTest.cs" />
     <Compile Include="Messaging\MessagingClientTest.cs" />
     <Compile Include="Messaging\SecureStringJsonConverterTest.cs" />
-    <Compile Include="ProcessCommandTests.cs" />
-    <Compile Include="ProcessHelperTest.cs" />
-    <Compile Include="ProcessHostLauncherTests.cs" />
-    <Compile Include="ProcessMonitorTests.cs" />
+    <Compile Include="Containers\ProcessCommandTests.cs" />
+    <Compile Include="Utilities\ProcessHelperTest.cs" />
+    <Compile Include="Containers\ProcessHostLauncherTests.cs" />
+    <Compile Include="Containers\ProcessMonitorTests.cs" />
     <Compile Include="TestSupport\ArgMatchers.cs" />
     <Compile Include="TestSupport\Asserts.cs" />
     <Compile Include="TestSupport\FactAdminRequired.cs" />
     <Compile Include="Messaging\MessageDispatcherTest.cs" />
-    <Compile Include="JobObjectTests.cs" />
-    <Compile Include="LocalPrincipalManagerTests.cs" />
-    <Compile Include="ContainerStubStatsTests.cs" />
+    <Compile Include="PInvoke\JobObjectTests.cs" />
+    <Compile Include="Utilities\LocalPrincipalManagerTests.cs" />
+    <Compile Include="Containers\ContainerStubStatsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestSupport\InputSource.cs" />
     <Compile Include="TestSupport\NSubstituteExtensions.cs" />
